--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 (max-width: 960px) 960px,
                 (max-width: 1920px) 1920px,
                 (max-width: 3024px) 3024px"
-          src="images/background.png"
+          src="images/background3840.png"
           alt="This is an image of various indoor house plants"
           title="Designed by Freepik. www.freepik.com">
 
